feature: Add AWS LocalStack, Firebase Auth and change directory structure
